fixed printing bugs
width and padding messed up, but now overridden by css

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,7 @@ a {
 
 @media print {
   .menu { display: none !important; }
+  [contenteditable=true]:empty:before { display: none !important; }
   html,
   body,
   html > body > .writer {
@@ -132,5 +133,7 @@ a {
     background: transparent !important;
     color: #000 !important;
     min-height: 100% !important;
+    width: 100% !important;
+    padding: 11pt !important;
   }
 }
